syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.vitor";
option java_outer_classname = "DiscountProto";

package discount;

// Service that return mocked discount percentage.
service Discount {
  rpc GetDiscount(GetDiscountRequest) returns (GetDiscountResponse) {}
}

// productID used to represent a product. Ilustrative only.
message GetDiscountRequest {
  int32 productID = 1;
}

// The discount percentage is a fixed value.
message GetDiscountResponse {
  float percentage = 1;
}
